2005-02-07  Ben Maurer  <bmaurer@ximian.com>

	* HeapScroller.cs: Use my wonderful new gtk# apis for clean code.

2005-02-06  Ben Maurer  <bmaurer@ximian.com>

	* HeapScroller.cs (OnUnmapped): make sure that we don't get events
	when another tab is open. Also, remove usage of obsolete gtk stuff.

	* TypeGraphViewer.cs: Changes to use the real scroller.

	* HeapScroller.cs: A real scroller, based on the one in f-spot.

2005-01-20  Ben Maurer  <bmaurer@ximian.com>

	* TypeGraphViewer.cs: add the heap scroller in an ifdef

	* HeapScroller.cs: New file.

2005-01-16  Ben Maurer  <bmaurer@ximian.com>

	* BacktraceViewer.cs: Lazy load context data.

	* Shell.cs, TypeGraphViewer.cs, BacktraceViewer.cs: A bit of
	refactoring.
	
	* Shell.cs (OnOpen): Add filter for heap prof files

2005-01-11  Ben Maurer  <bmaurer@ximian.com>

	* TypeGraphViewer.cs: Make the TypeListTreeNode a list only node
	
	* TypeGraphViewer.cs: The gdk hack is in gtk# now. yay

	* Shell.cs: Use file chooser. Other misc ui crap
	
	* Shell.cs: Prevent flicker

	* Shell.cs, ShellComponent.cs, ShellPager.cs: Some new code to
	make a tabbed interface

	* BacktraceViewer.cs, TypeGraphViewer.cs: adapt to new code

	* shell-ui.xml: New file for UI

2005-01-10  Ben Maurer  <bmaurer@ximian.com>

	* TypeGraphViewer.cs: More reasonable default sizes

2005-01-09  Ben Maurer  <bmaurer@ximian.com>

	* *: Initial Import.
