@@ -1,3 +1,8 @@
+2005-02-12  Ben Maurer  <bmaurer@ximian.com>
+
+	* HeapScroller.cs, ShellPager.cs, Shell.cs: Allow the closing of
+	tabs.
+
 2005-02-07  Ben Maurer  <bmaurer@ximian.com>
 
 	* HeapScroller.cs: Use my wonderful new gtk# apis for clean code.
